<resources>
    <string name="app_name">TMS365</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_gps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_truck_number">Enter truck number</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="message_required_truck_number">Please enter truck number.</string>
    <string name="title_activity_main">TMS365</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="icon_order_address_description">icon order address</string>
    <string name="icon_order_date_description">icon order date</string>
    <string name="des_image_button_search">image button search</string>
    <string name="des_image_button_refresh_order">image button refresh order</string>
    <string name="text_close">Close</string>
    <string name="des_button_close">button close</string>
    <string name="label_order_detail_information">Order detail information</string>
    <string name="label_customer_name">Customer name:</string>
    <string name="label_order_number">Order number :</string>
    <string name="label_price">Price :</string>
    <string name="label_remark">Remark :</string>
    <string name="label_order_list">Order list</string>
    <string name="assign_to_truck">Assign To Truck</string>
    <string name="pay">Pay</string>
    <string name="comments">Comments</string>
    <string name="create_new_order">Create new order</string>
    <string name="button_save_order">button save order</string>
    <string name="google_search_result">Google search result</string>

    <string name="facebook_app_id">2220687764883195</string>
    <string name="fb_login_protocol_scheme">fb2220687764883195</string>

    <string name="google_sign_in">Continue with Google</string>
    <string name="your_rating">Your Rating</string>
</resources>
