<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/label_order_list"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close_1_24dp"
            android:background="@drawable/ic_close_1_24dp"
            android:contentDescription="@string/des_button_close" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_order_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1"
        android:background="@color/colorLightGray"/>
    <Button
        android:id="@+id/btn_assign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_order_item"
        android:background="@drawable/btn_default"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/assign_to_truck" />
</RelativeLayout>